# membox

./: .env  .env.example  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/src/: __init__.py  config.py  main.py  memory_manager.py
backend/src/routes/: __init__.py  chat.py  memory.py  upload.py
frontend/: .gitignore  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/components/elements/: conversation.tsx  loader.tsx  message.tsx  prompt-input.tsx  sidebar.tsx  suggestion.tsx  user-selector.tsx
frontend/components/ui/: button.tsx  input-group.tsx  scroll-area.tsx  textarea.tsx  tooltip.tsx
frontend/hooks/: use-chat-sessions.ts  use-user.ts
